resources/public/css/application.css
.tooltip {
    font-size: 13px;
    width: 800px;
}
.tooltip.in {
    opacity: 1;
    filter: alpha(opacity=100);
    zoom: 1;
    width: 800px;
}

.tooltip-inner {
    background-color: #eeeeee;
    color: #111111;
    line-height: 15px;
    padding: 12px 12px;
    text-align: left;
    width: 800px;
    max-width: 800px;
    font-family: Consolas, monaco, monospace;
    font-size: 13px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
}

/* The <pre> element inside the tooltip */
pre.source-tooltip {
    font-size: 12px;
}

div.namespace {
    display: block;
    font-size: 13px;
    margin-bottom: 15px;
    line-height: 15px;
}

div#source {
    font-family: Consolas, monaco, monospace;
    font-size: 13px;
}

pre.source {
    visibility: hidden;
}

div.namespace a {
    margin-right: 5px;
}

div.doc b {
    color: #FF0051;
}

div.doc i {
    font-size: 13px;
    color: #aaaaaa;
}

div.doc i.args {
    color: #08c;
}

div.doc div.description {
    padding-top: 5px;
}

div.doc i.url {
    display: block;
    padding-top: 10px;
}

.right {
    float: right;
}

footer {
    margin-top: 20px;
}

